fix fractional scaling

BUG: 412738